Fix navbar layout jump when docking by removing !important from spacer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,7 +88,8 @@ h4 {
   height: auto;
 }
 .navbar-spacer {
-  display: none !important;
+  display: none;
+  height: 48px;
 }
 .navbar > .container {
   width: 100%;
